--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@ body {
     background-color: #ffffff;
     background-image: url("/public/meme-background.png");
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     font-family:  Inter, -apple-system, BlinkMacSystemFont, "segoe ui", Roboto, Helvetica, Arial, sans-serif;;
     color: #000000;
     padding: 50px 100px;
     margin: 0px;
-    background-position: bottom 65% right 1%;
+    background-position: bottom 72% right 1%;
 }
 
 
