--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,21 @@
 
 body {
-    background-color: #ffffff;
+    background-color: rgb(255, 255, 255);
     font-family:  Inter, -apple-system, BlinkMacSystemFont, "segoe ui", Roboto, Helvetica, Arial, sans-serif;;
     color: #000000;
-    padding: 50px 100px;
+    padding: 5px 10px;
     margin: 0px;
+    -webkit-font-smoothing: antialiased;
+
 }
 
 
 h2 {
     color: #000000;
     font-size: 50px;
+    margin-bottom: 10px;
+    padding-top: 15px;
+    margin-top: 0px;
 }
 
 .blocktext {
@@ -34,8 +39,8 @@ h2 {
     height: 20px;
     text-align: left;
     letter-spacing: 1px;
-    padding: 15px 10px;
-    width: 50%;
+    padding: 15px 0px;
+    width: 80%;
     font-family:  Inter, -apple-system, BlinkMacSystemFont, "segoe ui", Roboto, Helvetica, Arial, sans-serif;;
     border: none;
     outline: none;
@@ -46,6 +51,7 @@ h2 {
     color: rgba(128, 138, 157, 0.51);
     font-size: 14px;
     font-weight: 100;
+    padding-left: 10px;
  }
 #titleInput {
     margin-bottom: 10px;
@@ -59,14 +65,14 @@ h2 {
 
 
 .parent {
-    width: 1000px;
+    width: 1200px;
 }
 .coin {
     font-size: 0.7rem;
     color: #616370;
     font-weight: 100;
     position: relative;
-    margin-top: 6rem;
+    margin-top: 50px;
     margin-bottom: 1rem;
 }
 
@@ -103,13 +109,14 @@ h2 {
     background-size: cover;
     cursor: pointer;
     position: absolute;
-    right: 10%;
+    right: 2%;
     margin-top: 13px;
 }
 
 
 .inputs {
     display: flex;
+    width:1250px;
 }
 .secondInput {
     background-color: transparent;
@@ -118,8 +125,7 @@ h2 {
     height: 20px;
     text-align: left;
     letter-spacing: 1px;
-    padding: 15px 10px;
-    width: 60%;
+    width: 40%;
     font-family:  Inter, -apple-system, BlinkMacSystemFont, "segoe ui", Roboto, Helvetica, Arial, sans-serif;;
     border: none;
     outline: none;
@@ -133,6 +139,7 @@ h2 {
     margin: 0rem 0rem;
     overflow: auto;
     border: none;
+
 }
 
 
@@ -142,8 +149,8 @@ h2 {
     height: 20px;
     text-align: center;
     letter-spacing: 1px;
-    padding: 15px 10px;
-    width: 30%;
+    padding: 15px 0px;
+    width: 40%;
     font-family:  Inter, -apple-system, BlinkMacSystemFont, "segoe ui", Roboto, Helvetica, Arial, sans-serif;;
     border: none;
     outline: none;
@@ -178,7 +185,7 @@ h2 {
     width: 200px;
     position: absolute;
     left: 40%;
-    top: 80%;
+    top: 90%;
 }
 
 .sort {
@@ -197,8 +204,9 @@ h2 {
     margin-left: 7px;
 }
 
+
 table {
-    width: 1000px;
+    width: 1200px;
     table-layout: fixed;
     border-collapse: collapse;
 }
@@ -226,23 +234,23 @@ table th:nth-of-type(1) {
     text-align: left;
 }
 table th:nth-of-type(2) {
-    width: 30px;
+    width: 196px;
     text-align: left;
 }
 table th:nth-of-type(3) {
-    width: 200px;
+    width: 196px;
     text-align: right;
 }
 table th:nth-of-type(4) {
-    width: 200px;
+    width: 196px;
     text-align: right;
 }
 table th:nth-of-type(5) {
-    width: 200px;
+    width: 196px;
     text-align: right;
 }
 table th:nth-of-type(6) {
-    width: 200px;
+    width: 196px;
     text-align: right;
 }
 
@@ -250,29 +258,30 @@ table td:nth-of-type(1) {
     width: 20px;
     color: rgb(88, 102, 126);
     padding: 12.5px;
-    text-align: left;
+    text-align: center;
 
 }
 table td:nth-of-type(2) {
-    width: 30px;
+    width: 196px;
     text-align: left;
     padding: 12.5px;
+    text-align: left;
 }
 table td:nth-of-type(3) {
-    width: 200px;
+    width: 196px;
     text-align: right;
 }
 
 table td:nth-of-type(4) {
-    width:200px;
+    width:196px;
     text-align: right;
 }
 table td:nth-of-type(5) {
-    width:200px;
+    width:196px;
     text-align: right;
 }
 table td:nth-of-type(6) {
-    width:200px;
+    width:196px;
     text-align: right;
 }
 
@@ -294,9 +303,115 @@ td {
     color: #ea3943;
 }
 
+img {
+    width: 24px;
+    height: 24px;
+    align: middle;
+    padding-right: 10px;
+    vertical-align: middle
+}
+
+.icon {
+    display: inline;
+    height: 20px;
+}
+
+.symbol {
+    color: rgb(128, 138, 157);
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+.video-sub {
+    color: #58667e;
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 16px;
+    margin-bottom: 0px;
+}
+.video-sub1 {
+    font-size: 14px;
+    line-height: 24px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.video {
+    display: grid;
+    margin-right: 24px;
+    text-decoration: none;
+    padding-left: 0px;
+}
+
+h3 {
+    font-weight: 700;
+    line-height: 34px;
+    font-size: 24px;
+    margin: 8px 0px 4px;
+}
+
+.vid-carousel {
+    display: flex;
+    width: 1000px;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    padding-top: 20px;
+
+}
+
+.header3-text {
+    color: #58667e;
+    font-size: 14px;
+    margin: 0px auto;
+    line-height: 1.5;
+}
+
+.header3 {
+    padding: 10px 0px;
+}
+.global-stats {
+    padding: 9px 16px;
+    padding-left: 1px;
+    border-bottom: #eff2f5 solid 1px;
+    border-top: #eff2f5 solid 1px;
+    width: 100%;
+    line-height: 16px;
+}
+.global-stats span{
+    display: inline;
+    margin-right: 0px;
+}
+.name {
+    font-size: 11px;
+    color: rgb(88, 102, 126);
+    margin-right: 6px;
+    white-space: nowrap;
+    display: inline-block;
+    margin: 0px;
+}
+
+.number {
+    text-decoration: none;
+    color: rgb(56, 97, 251);
+    font-weight: 500;
+    font-size: 11px;
+    white-space: nowrap;
+    padding-right: 16px;
+    line-height: 16px;
+    display: inline-block;
+    margin: 0px;
+    letter-spacing: 1;
+}
 
 
 
+.global {
+    display: flex;
+}
+
+a {
+    color: #16c784;
+}
 
 
 
